--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/com/zent/controller/MenuController.java=UTF-8
 encoding//src/main/java/com/zent/controller/UserController.java=UTF-8
 encoding//src/main/java/com/zent/dao/PermissionDAO.java=UTF-8
 encoding//src/main/java/com/zent/service/UserService.java=UTF-8
